<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context=".activity.adminRes.AdminResHomeActivity">

    <!-- Header con logo y opciones -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <!-- Icono de perfil -->
        <Button
            android:id="@+id/btnProfile"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnProfile"
            app:icon="@drawable/rounded_person_24"
            app:iconTint="@color/btn_medium"
            android:backgroundTint="@color/bg_gray_light" />

        <!-- Logo Foodisea -->
        <ImageView
            android:id="@+id/ivLogoFoodisea"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/foodisea" />

        <!-- Icono de notificaciones -->
        <Button
            android:id="@+id/btnNotifications"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_medium"
            android:contentDescription="Notificaciones"
            app:icon="@drawable/ic_notifications" />
    </LinearLayout>

    <!-- Parte scrolleable -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:text="@string/welcome"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:fontFamily="@font/sen_font"/>

            <!-- Imagen  -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/imgRest"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_image"
                app:shapeAppearanceOverlay="@style/RoundedCorners"/>

            <TextView
                android:id="@+id/nombreRestaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameRest"
                android:fontFamily="@font/sen_font"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginVertical="18dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Descripción:"
                android:fontFamily="@font/sen_font"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/descripcionRestaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcionRest"
                android:textSize="14sp"
                android:textAlignment="viewStart"
                android:layout_marginBottom="18dp"/>

            <!-- Información de contacto  -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contacto:"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/sen_font"
                android:layout_marginBottom="4dp"/>

            <!-- locacion -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_location"
                    app:tint="@color/btn_dark"/>

                <TextView
                    android:id="@+id/tvRestaurantAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2118 Thornridge Cir. Syracuse"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

            <!-- numero -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="18dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_call"
                    app:tint="@color/btn_dark"/>

                <TextView
                    android:id="@+id/tvRestaurantTelef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="990857621"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

            <!-- opciones -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="16dp">

                <Button
                    android:id="@+id/btnCarta"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/search_view_bg"
                    android:paddingHorizontal="40dp"
                    app:backgroundTint="@color/bg_gray_light"
                    android:text="@string/btnCarta"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/sen_font"
                    app:icon="@drawable/menu"
                    app:iconTint="#000000"
                    app:iconSize="35dp"/>

                <Button
                    android:id="@+id/btnPedidos"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/search_view_bg"
                    android:paddingHorizontal="40dp"
                    app:backgroundTint="@color/bg_gray_light"
                    android:text="@string/btnPedidos"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/sen_font"
                    app:icon="@drawable/list"
                    app:iconTint="#000000"
                    app:iconSize="35dp" />

                <Button
                    android:id="@+id/btnReporte"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/search_view_bg"
                    android:paddingHorizontal="40dp"
                    app:backgroundTint="@color/bg_gray_light"
                    android:text="@string/btnReporte"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/sen_font"
                    app:icon="@drawable/report"
                    app:iconSize="35dp"
                    app:iconTint="#000000"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>