<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".activity.repartidor.RepartidorMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Header con logo y opciones -->
        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <!-- Icono de perfil -->
            <Button
                android:id="@+id/btnProfile"
                style="?attr/materialIconButtonFilledTonalStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/btnProfile"
                app:icon="@drawable/rounded_person_24"
                app:iconTint="@color/btn_medium"
                android:backgroundTint="@color/bg_gray_light"/>

            <!-- Logo Foodisea -->
            <ImageView
                android:id="@+id/ivLogoFoodisea"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/foodisea" />

            <!-- Icono de delivery -->
            <Button
                android:id="@+id/btnOrders"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/btnDelivery"
                app:icon="@drawable/ic_delivery_dining"
                android:backgroundTint="@color/btn_medium"/>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvGreeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="Hey John, ¡Buen Día!"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/gray_light"
                    android:drawableStart="@drawable/round_search_24"
                    android:drawablePadding="8dp"
                    android:hint="Search dishes, restaurants"
                    android:padding="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvGreeting"
                    app:layout_constraintTop_toBottomOf="@+id/tvGreeting" />

                <TextView
                    android:id="@+id/tvRestaurantes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="Restaurantes"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/etSearch"
                    app:layout_constraintTop_toBottomOf="@+id/etSearch" />


                <!-- RecyclerView para mostrar los restaurantes -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewRestaurantes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:scrollbars="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvRestaurantes"
                    app:layout_constraintTop_toBottomOf="@+id/tvRestaurantes"/>




            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>



    </LinearLayout>







</androidx.coordinatorlayout.widget.CoordinatorLayout>